Register and login UI implemented

--- a/src/app/components/Header/Header.html
+++ b/src/app/components/Header/Header.html
@@ -6,7 +6,7 @@
         <img class="header-logo" src="http://skydeck.berkeley.edu/wp-content/uploads/BioXplor-300x300.png" >
 
         <span flex></span>
-        <md-button class="md-raised" aria-label="My Account">
+        <md-button class="md-raised" aria-label="My Account" ng-if="$ctrl.user">
           My Account
         </md-button>
       </div>
