--- a/src/app/components/Login/Login.html
+++ b/src/app/components/Login/Login.html
@@ -15,7 +15,7 @@
 
     </md-card-content>
     <md-card-footer layout="column" layout-align="center center">
-      <md-button class="md-raised" aria-label="Sign up" ui-sref="home">
+      <md-button class="md-raised" aria-label="Sign up" ng-click="$ctrl.login()">
         Login
       </md-button>
       <div ui-sref="register">
