--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,26 @@ body{
   width: 100%;
   height: 80px;
   background: white;
+  z-index: 1000;
+  padding-top: 15px;
+}
+
+.header .rightItem{
+  color: black;
+}
+
+.home .card{
+  padding: 40px;
 }
 
 .home .title{
   font-size: 30px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.home .select{
+  display: block;
   margin-bottom: 40px;
 }
 
@@ -24,13 +40,23 @@ body{
   padding: 0;
 }
 
+.home .gene{
+  width: 40%;
+}
+
+.home .md-raised{
+  width: 200px;
+  text-transform: none;
+  font-size: 18px;
+}
+
 .menu{
   background-color: white !important;
   overflow-y: hidden;
 }
 
 .header-logo{
-  width: 130px;
+  width: 110px;
 }
 
 .main{
