- Indirect UI completed

--- a/src/app/components/Login/Login.html
+++ b/src/app/components/Login/Login.html
@@ -2,7 +2,7 @@
   <div class="title">
     Indication Expansion
   </div>
-  <md-card layout-align="center center">
+  <md-card layout-align="center center" class="card">
     <md-card-content>
       <md-input-container class="md-block">
         <label>Email address</label>
@@ -18,7 +18,7 @@
       <md-button class="md-raised" aria-label="Sign up" ng-click="$ctrl.login()">
         Login
       </md-button>
-      <div ui-sref="register">
+      <div class="pointer" ui-sref="register">
         Do you want to Register?
       </div>
     </md-card-footer>
