--- a/src/app/components/Register/Register.html
+++ b/src/app/components/Register/Register.html
@@ -2,7 +2,7 @@
   <div class="title">
     Your Details
   </div>
-  <md-card>
+  <md-card class="card">
     <md-card-content>
       <md-input-container class="md-block">
         <label>First name</label>
@@ -33,7 +33,7 @@
       <md-button class="md-raised" aria-label="Sign up" ui-sref="app">
         Sign up
       </md-button>
-      <div ui-sref="app">
+      <div class="pointer" ui-sref="app">
         Back to login
       </div>
     </md-card-footer>
