--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,47 @@ body{
 
 .home .card{
   padding: 40px;
+  margin: 30px;
+  -webkit-animation-name: fade-in;
+  -webkit-animation-duration: 0.5s;
+  animation-name: fade-in;
+  animation-duration: 0.5s;
+}
+
+.pointer{
+  cursor: pointer;
+}
+
+.md-input{
+  border: 1px solid rgba(0,0,0,0.12) !important;
+  width: 100%
+}
+
+.md-select-value{
+  border: 1px solid rgba(0,0,0,0.12);
+  width: 100%
+}
+
+.home .indirect-card{
+  width: 70%;
+}
+
+.home .indirect-card .md-select-value{
+  width: 70%;
+  text-align: center;
 }
 
 .home .title{
   font-size: 30px;
-  margin-bottom: 40px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.home .sub-title{
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   text-align: center;
 }
 
@@ -48,6 +84,19 @@ body{
   width: 200px;
   text-transform: none;
   font-size: 18px;
+  margin: 20px auto;
+  text-align: center;
+  display: block;
+}
+
+.home .add-more > div {
+  width: 30%;
+}
+
+.home .add-more .md-raised{
+  width: 50px;
+  text-transform: none;
+  font-size: 15px;
 }
 
 .menu{
@@ -57,6 +106,7 @@ body{
 
 .header-logo{
   width: 110px;
+  cursor: pointer;
 }
 
 .main{
@@ -70,4 +120,14 @@ body{
 
 .center{
   text-align: center;
+}
+
+@-webkit-keyframes fade-in {
+  0%   {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+@keyframes fade-in {
+  0%   {opacity: 0;}
+  100% {opacity: 1;}
 }
