- Add more functionality in Indirect Screen

--- a/src/app/components/Register/Register.html
+++ b/src/app/components/Register/Register.html
@@ -2,7 +2,7 @@
   <div class="title">
     Your Details
   </div>
-  <md-card class="card">
+  <md-card layout-align="center center" class="card">
     <md-card-content>
       <md-input-container class="md-block">
         <label>First name</label>
