--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body{
 }
 
 .home .card{
-  padding: 40px;
+  padding: 40px 0;
   margin: 30px;
   -webkit-animation-name: fade-in;
   -webkit-animation-duration: 0.5s;
@@ -29,6 +29,11 @@ body{
   animation-duration: 0.5s;
 }
 
+.home .card md-card-content{
+  width: 100%;
+  overflow: hidden;
+  overflow-y: scroll;
+}
 .pointer{
   cursor: pointer;
 }
@@ -130,4 +135,24 @@ body{
 @keyframes fade-in {
   0%   {opacity: 0;}
   100% {opacity: 1;}
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
