--- a/src/app/components/Register/Register.html
+++ b/src/app/components/Register/Register.html
@@ -2,8 +2,7 @@
   <div class="title">
     Your Details
   </div>
-  <md-card layout-align="center center" class="card">
-    <md-card-content>
+  <div class="register">
       <md-input-container class="md-block">
         <label>First name</label>
         <input ng-model="firstName">
@@ -28,16 +27,12 @@
         <label>Confirm Password</label>
         <input ng-model="confirm">
       </md-input-container>
-    </md-card-content>
-    <md-card-footer layout="column" layout-align="center center">
       <md-button class="md-raised" aria-label="Sign up" ui-sref="app">
         Sign up
       </md-button>
       <div class="pointer" ui-sref="app">
         Back to login
       </div>
-    </md-card-footer>
-  </md-card>
-
+  </div>
 
 </div>
