--- a/src/app/components/Header/Header.html
+++ b/src/app/components/Header/Header.html
@@ -7,12 +7,20 @@
 
         <span flex></span>
         <div ng-if="$ctrl.authService.user">
-          <md-button class="md-raised" aria-label="My Account" ng-if="$ctrl.$state.current.url.indexOf('gene') == -1">
-            My Account
-          </md-button>
-          <h3 class="rightItem" ng-if="$ctrl.$state.current.url.indexOf('gene') > -1">
+          <h3 class="right-item" ng-if="$ctrl.$state.current.url.indexOf('gene') > -1">
             {{$ctrl.authService.user.email}}
           </h3>
+          <div ng-if="$ctrl.$state.current.url.indexOf('gene') == -1">
+            <md-button  class="boxes green">34</md-button >
+            <md-button  class="boxes red">56</md-button >
+            <md-button  class="boxes blue">23</md-button >
+            <md-button class="button" aria-label="My Account">
+              My Account
+            </md-button>
+            <md-button class="boxes search">
+              <img src="../../../../assets/icons/search.svg" style="width: 20px;" />
+            </md-button >
+          </div>
         </div>
 
       </div>
