--- a/src/app/components/Search/Search.html
+++ b/src/app/components/Search/Search.html
@@ -21,9 +21,9 @@
             </div>
             <!-- Column # 3 -->
             <div class="md-secondary">
-              <md-button class="sm-boxes boxes blue"><img class="sm-icon" src="../../../../assets/icons/question.svg"></md-button>
-              <md-button class="sm-boxes boxes green"><img class="sm-icon" src="../../../../assets/icons/tick.svg"></md-button>
-              <md-button class="sm-boxes boxes red"><img class="sm-icon" src="../../../../assets/icons/letter-x.svg"></md-button>
+              <md-button class="sm-boxes boxes blue" ng-click="$ctrl.fillBucket('blue')"><img class="sm-icon" src="../../../../assets/icons/question.svg"></md-button>
+              <md-button class="sm-boxes boxes green" ng-click="$ctrl.fillBucket('green')"><img class="sm-icon" src="../../../../assets/icons/tick.svg"></md-button>
+              <md-button class="sm-boxes boxes red" ng-click="$ctrl.fillBucket('red')"><img class="sm-icon" src="../../../../assets/icons/letter-x.svg"></md-button>
               <md-button class="sm-boxes boxes" ng-click="$ctrl.show($index)"><img class="sm-icon" src="../../../../assets/icons/angle-arrow-down.svg"></md-button>
 
             </div>
